samples/_failures_safe/1761208540_db0d8b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e2bf9bd0.c: In function ‘main’:
./samples/SAFE/__tmp_e2bf9bd0.c:167:16: error: missing terminating " character
  167 |         printf("Matrix to transpose:\
      |                ^~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_e2bf9bd0.c:167:9: error: expected expression at end of input
  167 |         printf("Matrix to transpose:\
      |         ^~~~~~
./samples/SAFE/__tmp_e2bf9bd0.c:167:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e2bf9bd0.c:167:9: error: expected declaration or statement at end of input
